--- a/config/issue-rules.yml
+++ b/config/issue-rules.yml
@@ -14,5 +14,5 @@ rules:
 
 # List that always runs after rules and nomatches. Look for missing sets of tags here.
 tags:
-- noneIn: ['bug', 'enhancement', 'question'] # If no bug, enhancement, or question labels are added, label with 'triage'
+- noneIn: ['bug', 'enhancement', 'question', 'help wanted'] # If no bug, enhancement, or question labels are added, label with 'triage'
   addLabels: ['invalid']
