--- a/.github/workflows/triage_issues.yml
+++ b/.github/workflows/triage_issues.yml
@@ -1,4 +1,4 @@
-name: "Label Issues for Question"
+name: "Label Issues for Triage"
 on:
   issues:
     types:
@@ -15,4 +15,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
-          LABELS: question
+          LABELS: triage
